<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dydensborg.dk</groupId>
  <artifactId>cookbook</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>cookbook</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
          <maven.compiler.source>1.8</maven.compiler.source>
          <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
    <!-- Command line parse -->
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.4</version>
    </dependency>

    <!-- JSON is used for the postings that are returned in - you guessed it - JSON -->
    <!-- JSON -->
    <dependency>
      <groupId>javax.json</groupId>
      <artifactId>javax.json-api</artifactId>
      <version>1.1</version>
    </dependency>

      <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
      <dependency>
          <groupId>commons-io</groupId>
          <artifactId>commons-io</artifactId>
          <version>2.5</version>
      </dependency>


      <!-- JSON implementation -->
    <dependency>
      <groupId>org.glassfish</groupId>
      <artifactId>javax.json</artifactId>
      <version>1.1</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.9</version>
    </dependency>


  </dependencies>



  <!-- Configure build -->
  <build>
    <plugins>

      <!-- Build a jar with deps and start class manifest -->
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <mainClass>dydensborg.dk.App</mainClass>
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id> <!-- this is used for inheritance merges -->
            <phase>package</phase> <!-- bind to the packaging phase -->
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

        <plugin>
            <groupId>com.akathist.maven.plugins.launch4j</groupId>
            <artifactId>launch4j-maven-plugin</artifactId>
            <executions>
                <execution>
                    <id>l4j-clui</id>
                    <phase>package</phase>
                    <goals><goal>launch4j</goal></goals>
                    <configuration>
                        <headerType>console</headerType>
                        <outfile>target/cookbook.exe</outfile>
                        <jar>target/cookbook-1.0-SNAPSHOT-jar-with-dependencies.jar</jar>
                        <errTitle>encc</errTitle>
                        <classPath>
                            <mainClass>dydensborg.dk.App</mainClass>
                            <addDependencies>false</addDependencies>
                            <preCp>anything</preCp>
                        </classPath>
                        <jre>
                            <minVersion>1.8.0</minVersion>
                            <opts>
                                <opt>-Djava.endorsed.dirs=./endorsed</opt>
                            </opts>
                        </jre>
                        <versionInfo>
                            <fileVersion>1.2.3.4</fileVersion>
                            <txtFileVersion>txt file version?</txtFileVersion>
                            <fileDescription>Cookbook program</fileDescription>
                            <copyright>my copyright</copyright>
                            <productVersion>4.3.2.1</productVersion>
                            <txtProductVersion>txt product version</txtProductVersion>
                            <productName>E-N-C-C</productName>
                            <internalName>ccne</internalName>
                            <originalFilename>original.exe</originalFilename>
                        </versionInfo>
                    </configuration>
                </execution>
            </executions>
        </plugin>

    </plugins>
  </build>
</project>
